# labeltext

./: .flake8  .readthedocs.yml  README.md  example.csv  main.py  mkdocs.yml  pyproject.toml  scripts.py
docs/: requirements.txt
docs/css/: extra.css
docs/source/: conf.py  index.md
labeltext/: __init__.py  annotate.py
