[tool.poetry]
name = "labeltext"
version = "0.1.1"
description = "labeltext is a simple command-line utility to annotate large amounts of text quickly for text classification tasks."
authors = ["Soumendra Dhanee <soumendra@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
attrdict = "^2.0.1"
loguru = "^0.5.1"
pandas = "^1.0.4"
pyfiglet = "^0.8.post1"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.3"
pylint = "^2.5.3"
isort = "^4.3.21"
flake8 = "^3.8.3"
mypy = "^0.780"
sphinx = "^3.1.1"

[tool.black]
line-length = 120
target-version = ['py37']

[tool.poetry.scripts]
fix = "scripts:fix"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

